--- a/src/App.css
+++ b/src/App.css
@@ -248,8 +248,16 @@ a.dotted-link:hover {
 }
 
 /* ======= bg ======= */
+.bg2 {
+  background-image: url("./assets/leone-venter-VieM9BdZKFo-unsplash.jpg");
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .bg {
-  background-image: url("./assets/jeshoots-com-pUAM5hPaCRI-unsplash.jpg");
+  background-image: url("./assets/joanna-kosinska-1_CMoFsPfso-unsplash.jpg");
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
@@ -258,9 +266,6 @@ a.dotted-link:hover {
 
 /* ======= Header ======= */
 .header {
-  /* background-color: #f5f5f5; */
-  /* opacity: 0.5; */
-  border-top: 10px solid #778492;
   padding: 30px 30px 0 30px;
 }
 .header .btn {
@@ -270,24 +275,30 @@ a.dotted-link:hover {
 .header .profile-image {
   margin-right: 30px;
 }
-.header .profile-content .name {
-  color: #49515a;
-  font-size: 38px;
-  margin-bottom: 5px;
+.header .profile-content {
   margin-top: 30px;
+  justify-content: space-between;
+}
+.header .profile-content .name {
+  color: #102842;
+  font-size: 3vw;
 }
 .header .profile-content .desc {
-  color: #778492;
-  font-family: "Lato", arial, sans-serif;
+  color: #102842;
+  /* font-family: "Lato", arial, sans-serif; */
   font-weight: 400;
-  font-size: 24px;
+  font-size: 2vw;
   margin-top: 0;
   margin-bottom: 15px;
 }
+.header .profile-content .projects {
+  color: #102842;
+  font-size: 1.5vw;
+}
 .header .profile-content .social a {
-  background: #b0b7bf;
-  width: 36px;
-  height: 36px;
+  background: #6dc5d1;
+  width: 2vw;
+  height: 2vw;
   display: inline-block;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -304,7 +315,7 @@ a.dotted-link:hover {
   background: #778492;
 }
 .header .profile-content .social a .fa {
-  font-size: 20px;
+  font-size: 1.125vw;
   padding-top: 8px;
 }
 /* ======= Sections======= */
@@ -320,15 +331,16 @@ img.profile-image {
 }
 .about-me-heading {
   color: #49515a;
-  font-size: 36px;
-  transform: rotate(-6deg);
   text-decoration: underline;
+  font-size: 2vw;
+  text-align: left;
+  transform: rotate(-6deg);
+  margin: 5vh;
 }
 .about-me {
-  width: 37vw;
-  margin-left: 33vw;
-  transform: rotate(-8deg);
-  font-size: 1.4vw;
+  width: 55vw;
+  margin-left: 10vw;
+  font-size: 1.5vw;
   color: #49515a;
 }
 
@@ -428,22 +440,7 @@ img.profile-image {
 .latest .featured-image .ribbon .text:after {
   right: 0;
 }
-/* Projects Section */
-.projects .item {
-  margin-bottom: 30px;
-}
-.projects .item .title {
-  font-size: 16px;
-  margin-top: 0;
-  margin-bottom: 5px;
-  line-height: 1.5;
-}
-.projects .item .title a {
-  color: #778492;
-}
-.projects .item .title a:hover {
-  color: #5f6b77;
-}
+
 /* Work Section */
 .experience .item {
   margin-bottom: 30px;
@@ -692,4 +689,9 @@ img.profile-image {
   .container {
     width: 1360px;
   }
+}
+
+/* games */
+.games-container {
+  padding: 8% 20%;
 }
